добавлена поддержка номера телефона и исправлены ошибки аутентификации